--- a/longhorn/nginx-iscsi_pod.yaml
+++ b/longhorn/nginx-iscsi_pod.yaml
@@ -11,7 +11,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: edgefs-nfs-csi-pvc
+  name: longhorn-iscsi-csi-pvc
 spec:
   accessModes:
   - ReadWriteOnce
@@ -35,9 +35,9 @@ spec:
       protocol: TCP
     volumeMounts:
       - mountPath: /var/lib/www/html
-        name: edgefs-nfs-csi-volume 
+        name: longhorn-iscsi-csi-volume 
   volumes:
-  - name: edgefs-nfs-csi-volume
+  - name: longhorn-nfs-iscsi-volume
     persistentVolumeClaim:
-      claimName: edgefs-nfs-csi-pvc
+      claimName: longhorn-nfs-iscsi-pvc
       readOnly: false
