--- a/portworx/nginx-nfs_pod.yaml
+++ b/portworx/nginx-nfs_pod.yaml
@@ -18,7 +18,7 @@ spec:
   resources:
     requests:
       storage: 1Gi
-  storageClassName: px-storageclass
+  storageClassName: px-dedicated-sc
 
 ---
 apiVersion: v1
